--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>LOL</title>
+    <title>Voting Map</title>
 
     <!-- Load Leaflet from CDN -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
