--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             left: 10px;
             bottom: 10px;
         }
+        #links{
+            position: absolute;
+            right:10px;
+            bottom:20px;
+        }
     </style>
 </head>
 
@@ -57,6 +62,9 @@
 
     <div id="legend">
         <img src="muddy_key_labeled_compressed.png" alt="muddy label" width="150" height="150">
+    </div>
+    <div id="links">
+        <a href="https://stemlounge.com/muddy-america-color-balancing-trumps-election-map-infographic/">Click here for more</a> 
     </div>
 
 
