--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         <img src="muddy_key_labeled_compressed.png" alt="muddy label" width="150" height="150">
     </div>
     <div id="links">
-        <a href="https://stemlounge.com/muddy-america-color-balancing-trumps-election-map-infographic/">Click here for more</a> 
+        <button onclick="window.location.href = 'https://stemlounge.com/muddy-america-color-balancing-trumps-election-map-infographic/';">Original Muddy Map</button>
+        <button onclick="window.location.href = 'https://github.com/tuttlepower/VotingMap';">Github</button>
+        
     </div>
 
 
