--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta property="og:image"
+    content="VoteMap.PNG" />
     <link rel="icon"
         href="https://raw.githubusercontent.com/tuttlepower/tuttlepower/master/Resources/Images/facelighting.png"
         type="Head" sizes="16x16">
