--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta property="og:image"
-    content="VoteMap.PNG" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/tuttlepower/VotingMap/master/VoteMap.PNG"/>
     <link rel="icon"
         href="https://raw.githubusercontent.com/tuttlepower/tuttlepower/master/Resources/Images/facelighting.png"
         type="Head" sizes="16x16">
